--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -16,7 +16,7 @@ body {
 
 .reveal {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 42px;
   font-weight: normal;
   color: #222; }
 
@@ -50,7 +50,7 @@ body {
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  /* text-transform: uppercase; */
+  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
@@ -142,6 +142,7 @@ body {
 .reveal pre {
   display: block;
   position: relative;
+  width: 90%;
   margin: 20px auto;
   text-align: left;
   font-size: 0.55em;
